added login and signup routes

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,17 +7,13 @@
         Post Title:
       </label>
       <br />
-      <input class="input is-primary" id="post_title">
-        {{post_title}}
-      </input>
+      <input class="input is-primary" id="post_title" placeholder="Post Title"></input>
       <br />
       <label for="post_content">
         Post
       </label>
       <br />
-      <textarea class="textarea is-primary" placeholder="Write Post here" id="post_content">
-        {{post_content}}
-      </textarea>
+      <textarea class="textarea is-primary" placeholder="Write Post here" id="post_content"></textarea>
       <br />
       <button class="button is-primary" type="submit" value="Submit">
         Submit
@@ -26,4 +22,4 @@
   </div>
 </div>
 
-<script src="../public/js/add-post.js"></script>
+<script src="/js/add-post.js"></script>
