--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,30 +1,76 @@
 <div class="container">
+  {{#if user_id}}
+    <section class="flex-row justify-center">
+    <h2>Logged in!</h2>
+  </section>
+  {{/if}}
     <h2>
-      Create Account
+      Log In:
     </h2>
-    <form class="column is-full add-post-form">
+    <form class="column is-full" id="login-form">
       <label for="post_title">
         Username:
       </label>
       <br />
-      <input class="input is-primary" placeholder="Username" id="username">
-        {{username}}
+      <input class="input is-primary" placeholder="Username" id="login_username">
+        
       </input>
       <br />
       <label for="post_content">
         Email:
       </label>
       <br />
-      <input class="input is-primary" placeholder="Email" id="email">
-        {{email}}
+      <input class="input is-primary" placeholder="Email" id="login_email">
+        
       </input>
       <br />
       <label for="post_content">
         Password:
       </label>
       <br />
-      <input class="input is-primary" placeholder="Password" id="password">
-        {{Password}}
+      <input class="input is-primary" placeholder="Password" id="login_password">
+        
+      </input>
+      <button class="button is-primary" type="submit" value="Submit">
+        Submit
+      </button>
+    </form>
+  </div>
+</div>
+<br />
+<br />
+<section>
+  <h1>---OR---</h1>
+</section>
+<br />
+<br />
+<div class="container">
+    <h2>
+      Create Account
+    </h2>
+    <form class="column is-full" id="create-account-form">
+      <label for="post_title">
+        Username:
+      </label>
+      <br />
+      <input class="input is-primary" placeholder="Username" id="create_username">
+        
+      </input>
+      <br />
+      <label for="post_content">
+        Email:
+      </label>
+      <br />
+      <input class="input is-primary" placeholder="Email" id="create_email">
+        
+      </input>
+      <br />
+      <label for="post_content">
+        Password:
+      </label>
+      <br />
+      <input class="input is-primary" placeholder="Password" id="create_password">
+       
       </input>
       <button class="button is-primary" type="submit" value="Submit">
         Submit
@@ -33,4 +79,7 @@
   </div>
 </div>
 
-<script src="../public/js/add-post.js"></script>
+
+
+<script src="/js/create-account.js"></script>
+<script src="/js/login.js"></script>
