--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
   </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
+  <header class="header">
     <nav class="navbar">
       <div class="navbar-brand is-big">
         <h1>Tech Blog</h1>
